<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">


    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimary"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/chTerms"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chTerms"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:id="@+id/radio_masc"/>
        <RadioButton
                android:text="@string/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/radio_fem"
                android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/text_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <CheckBox
            android:text="@string/text_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chBoxNotification"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/aceito_termos_de_uso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/chBoxNotification"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chBoxNotification"/>
    <CheckBox
            android:text="@string/text_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chTerms"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/trocar_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"/>


</android.support.constraint.ConstraintLayout>